# gps2gtfs

./: .gitignore  CHANGELOG.TXT  LICENSE  Makefile  PACKAGE_DESCRIPTION.md  README.md  README_package.md  Statistical_anallysis.ipynb  bus_stops_extraction.py  bus_trip_extraction.py  non_bus_stop_idle_time.ipynb  requirements.txt  setup.cfg  setup.py
Analysis/: Statistical_anallysis.ipynb  non bus_stop_idle_time.ipynb
Examples/: bus_stop_times.csv  finn.csv  main.py  main2.py
examples/: pipeline.py  pipeline_trip.py  pipeline_trip_stop.py
examples/gopi/: main.py  main2.py
examples/raw_data/: bus_stops_654.csv  bus_terminals_654.csv
gps2gfts/: __init__.py  bus_stops_extraction.py  bus_trip_extraction.py
gps2gfts/components/: __init__.py
gps2gfts/components/Utility/: __init__.py  geo_data_frame_utility.py
gps2gfts/components/load_data/: __init__.py  load_data_from_csv.py
gps2gfts/components/pre_processing/: __init__.py  (+1 more)
gps2gtfs/: __init__.py  pipeline.py  pipline_trip.py
gps2gtfs/data_field/: __init__.py  im_field.py  input_field.py  output_field.py
gps2gtfs/load_data/: __init__.py  load_from_csv.py
gps2gtfs/pipeline/: __init__.py  trip.py  trip_stop.py
gps2gtfs/preprocessing/: __init__.py  data_cleaner.py
gps2gtfs/stop/: __init__.py  data_preparator.py  feature_extractor.py  stop_extractor.py
gps2gtfs/trip/: __init__.py  feature_extractor.py  trip_extractor.py
gps2gtfs/utility/: __init__.py  data_io_converter.py  logger.py
src/: 01_bus_trip_extraction.py  02_bus_stops_extraction.py
src/analysis/: Statistical_anallysis.ipynb
(+8 files in other folders)
